StressTestEnvironment/chrome_node.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-deployment
  namespace: stress
spec:
  selector:
    matchLabels:
      app: selenium-node
  replicas: 10
  template:
    metadata:
      labels:
        app: selenium-node
    spec:
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      hostAliases:
      - ip: "IP to map hostname"
        hostnames:
        - "guacamole.com"
      containers:
      - name: selenium-node
        image: selenium/node-chrome-debug:3.141
        ports:
        - containerPort: 5555
        volumeMounts:
          - mountPath: /dev/shm
            name: dshm
      nodeName: hostname
