StressTestEnvironment/selenium_hub.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: stress
  labels:
    app: selenium-hub
spec:
  type: NodePort
  ports:
  - port: 4444
    targetPort: 4444
    nodePort: 32495
  selector:
    app: selenium-hub
  sessionAffinity: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
  namespace: stress
  labels:
    app: selenium-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-hub
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      containers:
      - name: selenium-hub
        image: selenium/hub:3.141
        ports:
          - containerPort: 4444
        resources:
          limits:
            memory: "1000Mi"
            cpu: ".5"
        livenessProbe:
          httpGet:
            path: /wd/hub/status
            port: 4444
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /wd/hub/status
            port: 4444
          initialDelaySeconds: 30
          timeoutSeconds: 5
