StressTestEnvironment/ingress_stress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-hub-ingress
  namespace: stress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
spec:
  rules:
  - host: selenium-dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: selenium-hub
            port: 
              number: 4444
